--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,33 @@
 [submodule "modules/puppi"]
 	path = modules/puppi
 	url = https://github.com/example42/puppi.git
+[submodule "modules/stdlib"]
+	path = modules/stdlib
+	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
+[submodule "modules/vcsrepo"]
+	path = modules/vcsrepo
+	url = https://github.com/puppetlabs/puppetlabs-vcsrepo.git
+[submodule "modules/apt"]
+	path = modules/apt
+	url = https://github.com/puppetlabs/puppetlabs-apt.git
+[submodule "modules/firewall"]
+	path = modules/firewall
+	url = https://github.com/puppetlabs/puppetlabs-firewall.git
+[submodule "modules/apache"]
+	path = modules/apache
+	url = https://github.com/puppetlabs/puppetlabs-apache.git
+[submodule "modules/mysql"]
+	path = modules/mysql
+	url = https://github.com/example42/puppet-mysql.git
+[submodule "modules/php"]
+	path = modules/php
+	url = https://github.com/example42/puppet-php.git
+[submodule "modules/pear"]
+	path = modules/pear
+	url = https://github.com/treehouseagency/puppet-pear.git
+[submodule "modules/ruby"]
+	path = modules/ruby
+	url = https://github.com/puppetlabs/puppetlabs-ruby.git
+[submodule "modules/composer"]
+	path = modules/composer
+	url = https://github.com/willdurand/puppet-composer.git
