--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "modules/composer"]
 	path = modules/composer
 	url = https://github.com/willdurand/puppet-composer.git
+[submodule "modules/solr"]
+	path = modules/solr
+	url = https://github.com/example42/puppet-solr.git
